--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">TtopAcademy</string>
+    <string name="app_name">Ttop Academy</string>
+    <string name="practice_questions">Practice Questions</string>
 </resources>
